--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Landing Page Simples</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <p class="logo">GATOS</p>
+
+      <ul>
+        <li><a href="">header link one</a></li>
+        <li><a href="">header link two</a></li>
+        <li><a href="">header link three</a></li>
+      </ul>
+    </header>
+    <div class="primary-section">
+      <div class="text">
+        <p class="text-primary">Gatos!</p>
+        <p class="text-secundary">Olhos de um predador,garras afiadas, um olfato poderoso.Sim... Felinos!
+        Vejá um pouco sobre os felinos e vejá também um pouco sobre suas cores preferidas pelos humanos.
+        </p>
+        <button class="sign-up">Inscreva-se</button>
+      </div>
+
+      <div class="imagem">
+        <img src="imgs/gato.jpg" alt="gato" />
+      </div>
+    </div>
+  </body>
 </html>
