Adicionei a 2 sessão e a 3 sessão. O site ficou mais personalizado em relação ao tema de gatos.

--- a/index.html
+++ b/index.html
@@ -19,15 +19,41 @@
     <div class="primary-section">
       <div class="text">
         <p class="text-primary">Gatos!</p>
-        <p class="text-secundary">Olhos de um predador,garras afiadas, um olfato poderoso.Sim... Felinos!
-        Vejá um pouco sobre os felinos e vejá também um pouco sobre suas cores preferidas pelos humanos.
+        <p class="text-secundary">
+          Olhos de um predador,garras afiadas, um olfato poderoso.Sim...
+          Felinos! Vejá um pouco sobre os felinos e vejá também um pouco sobre
+          suas raças preferidas pelos humanos.
         </p>
         <button class="sign-up">Inscreva-se</button>
       </div>
-
       <div class="imagem">
         <img src="imgs/gato.jpg" alt="gato" />
       </div>
+    </div>
+    <div class="second-section">
+      <p class="text">Tipos de gatos mais adotados pelas pessoas.</p>
+      <div class="colors-cats">
+        <div class="cats">
+          <img src="imgs/gato-bengal.jpg" alt="gato bengal" />
+          <p>Muito adotado por quem quer um gato exótico tipo leopardo</p>
+        </div>
+        <div class="cats">
+          <img src="imgs/gato-maine-coon.jpg" alt="gato Maine Coon" />
+          <p>Muito querido por ser gigante e dócil.</p>
+        </div>
+        <div class="cats">
+          <img src="imgs/gato-persa.jpg" alt="Gato Persa" />
+          <p>Popular pela aparência fofa</p>
+        </div>
+        <div class="cats">
+          <img src="imgs/gato-siames.jpg" alt="gato Siamês" />
+          <p>Muito adotado porque é carinhoso e falante</p>
+        </div>
+      </div>
+    </div>
+    <div class="third-section">
+      <p class="text-one">"Os gatos possuem absoluta honestidade emocional; os seres humanos, por uma razão ou outra, podem esconder seus sentimentos, mas um gato não."</p>
+      <p class="text-two">-Ernest Hemingway</p>
     </div>
   </body>
 </html>
