--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   <body>
     <header>
       <p class="logo">GATOS</p>
-
       <ul>
-        <li><a href="">header link one</a></li>
-        <li><a href="">header link two</a></li>
-        <li><a href="">header link three</a></li>
+        <li><a href="#inicio">INICIO</a></li>
+        <li><a href="#tipo">TIPO</a></li>
+        <li><a href="#contato">CONTATO</a></li>
       </ul>
     </header>
-    <div class="primary-section">
+    <div class="primary-section" id="inicio">
       <div class="text">
         <p class="text-primary">Gatos!</p>
         <p class="text-secundary">
@@ -24,36 +23,62 @@
           Felinos! Vejá um pouco sobre os felinos e vejá também um pouco sobre
           suas raças preferidas pelos humanos.
         </p>
-        <button class="sign-up">Inscreva-se</button>
+        <button class="sign-up"><a href="https://github.com/SamukaArcanjo" target="_blank">Inscreva-se</a></button>
       </div>
       <div class="imagem">
         <img src="imgs/gato.jpg" alt="gato" />
       </div>
     </div>
-    <div class="second-section">
+    <div class="second-section" id="tipo">
       <p class="text">Tipos de gatos mais adotados pelas pessoas.</p>
       <div class="colors-cats">
         <div class="cats">
+          <p class="title">Bengal</p>
           <img src="imgs/gato-bengal.jpg" alt="gato bengal" />
-          <p>Muito adotado por quem quer um gato exótico tipo leopardo</p>
+          <p class="text-one">
+            Muito adotado por quem quer um gato exótico tipo leopardo
+          </p>
         </div>
         <div class="cats">
+          <p class="title">Maine</p>
           <img src="imgs/gato-maine-coon.jpg" alt="gato Maine Coon" />
-          <p>Muito querido por ser gigante e dócil.</p>
+          <p class="text-one">Muito querido por ser gigante e dócil.</p>
         </div>
         <div class="cats">
+          <p class="title">Persa</p>
           <img src="imgs/gato-persa.jpg" alt="Gato Persa" />
-          <p>Popular pela aparência fofa</p>
+          <p class="text-one">Popular pela aparência fofa</p>
         </div>
         <div class="cats">
+          <p class="title">Siamês</p>
           <img src="imgs/gato-siames.jpg" alt="gato Siamês" />
-          <p>Muito adotado porque é carinhoso e falante</p>
+          <p class="text-one">Muito adotado porque é carinhoso e falante</p>
         </div>
       </div>
     </div>
     <div class="third-section">
-      <p class="text-one">"Os gatos possuem absoluta honestidade emocional; os seres humanos, por uma razão ou outra, podem esconder seus sentimentos, mas um gato não."</p>
+      <div class="sub-section">
+        <p class="text-one">
+          "Os gatos possuem absoluta honestidade emocional; os seres humanos,
+          por uma razão ou outra, podem esconder seus sentimentos, mas um gato
+          não."
+        </p>
+      </div>
       <p class="text-two">-Ernest Hemingway</p>
     </div>
+    <div class="fourth-section" id="contato">
+      <div class="sub-section">
+        <div class="text">
+          <p class="text-one">Acompanhe o meu progresso</p>
+          <p class="text-two">
+            Me acompanhe em meu progresso no github. Espero conseguir ajudar, se necessário. 
+          </p>
+        </div>
+        <button class="sign-up"><a href="https://github.com/SamukaArcanjo" target="_blank" rel="noopener noreferrer">Inscreva-se</a></button>
+      </div>
+    </div>
+    <footer>
+      <p class="creator">Direitos Autorais © Samuel Arcanjo 2026  <br>Aprendendo com TOP (The-project-Odin)</p>
+    </footer>
   </body>
 </html>
